Add PySpark filter for AI buildings and AI roads

--- a/notebooks-contributions/open-parquet-duckdb.ipynb
+++ b/notebooks-contributions/open-parquet-duckdb.ipynb
@@ -97,7 +97,25 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ArrowMemoryError",
+     "evalue": "realloc of size 47185920 failed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mArrowMemoryError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\milan\\OneDrive - MUNI\\VŠ\\PhD\\Zahraniční stáž\\Work\\HeiGIT_notebooks\\analysis\\ai-assisted-osm-mapping-stats\\notebooks-contributions\\open-parquet-duckdb.ipynb Cell 7\u001b[0m in \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-contributions/open-parquet-duckdb.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m parquet_files_dir:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-contributions/open-parquet-duckdb.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39m# Extract table name from file path\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-contributions/open-parquet-duckdb.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     table_name \u001b[39m=\u001b[39m file\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39m\"\u001b[39m)[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-contributions/open-parquet-duckdb.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     table \u001b[39m=\u001b[39m pq\u001b[39m.\u001b[39mread_table(file)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/milan/OneDrive%20-%20MUNI/V%C5%A0/PhD/Zahrani%C4%8Dn%C3%AD%20st%C3%A1%C5%BE/Work/HeiGIT_notebooks/analysis/ai-assisted-osm-mapping-stats/notebooks-contributions/open-parquet-duckdb.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     con\u001b[39m.\u001b[39mregister(table_name, table)\n",
+      "File \u001b[1;32mc:\\Users\\milan\\general_py_venv\\lib\\site-packages\\pyarrow\\parquet\\core.py:2973\u001b[0m, in \u001b[0;36mread_table\u001b[1;34m(source, columns, use_threads, metadata, schema, use_pandas_metadata, read_dictionary, memory_map, buffer_size, partitioning, filesystem, filters, use_legacy_dataset, ignore_prefixes, pre_buffer, coerce_int96_timestamp_unit, decryption_properties, thrift_string_size_limit, thrift_container_size_limit)\u001b[0m\n\u001b[0;32m   2962\u001b[0m         \u001b[39m# TODO test that source is not a directory or a list\u001b[39;00m\n\u001b[0;32m   2963\u001b[0m         dataset \u001b[39m=\u001b[39m ParquetFile(\n\u001b[0;32m   2964\u001b[0m             source, metadata\u001b[39m=\u001b[39mmetadata, read_dictionary\u001b[39m=\u001b[39mread_dictionary,\n\u001b[0;32m   2965\u001b[0m             memory_map\u001b[39m=\u001b[39mmemory_map, buffer_size\u001b[39m=\u001b[39mbuffer_size,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   2970\u001b[0m             thrift_container_size_limit\u001b[39m=\u001b[39mthrift_container_size_limit,\n\u001b[0;32m   2971\u001b[0m         )\n\u001b[1;32m-> 2973\u001b[0m     \u001b[39mreturn\u001b[39;00m dataset\u001b[39m.\u001b[39;49mread(columns\u001b[39m=\u001b[39;49mcolumns, use_threads\u001b[39m=\u001b[39;49muse_threads,\n\u001b[0;32m   2974\u001b[0m                         use_pandas_metadata\u001b[39m=\u001b[39;49muse_pandas_metadata)\n\u001b[0;32m   2976\u001b[0m warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m   2977\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mPassing \u001b[39m\u001b[39m'\u001b[39m\u001b[39muse_legacy_dataset=True\u001b[39m\u001b[39m'\u001b[39m\u001b[39m to get the legacy behaviour is \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2978\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mdeprecated as of pyarrow 8.0.0, and the legacy implementation will \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2979\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mbe removed in a future version.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   2980\u001b[0m     \u001b[39mFutureWarning\u001b[39;00m, stacklevel\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[0;32m   2982\u001b[0m \u001b[39mif\u001b[39;00m ignore_prefixes \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\milan\\general_py_venv\\lib\\site-packages\\pyarrow\\parquet\\core.py:2601\u001b[0m, in \u001b[0;36m_ParquetDatasetV2.read\u001b[1;34m(self, columns, use_threads, use_pandas_metadata)\u001b[0m\n\u001b[0;32m   2593\u001b[0m         index_columns \u001b[39m=\u001b[39m [\n\u001b[0;32m   2594\u001b[0m             col \u001b[39mfor\u001b[39;00m col \u001b[39min\u001b[39;00m _get_pandas_index_columns(metadata)\n\u001b[0;32m   2595\u001b[0m             \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(col, \u001b[39mdict\u001b[39m)\n\u001b[0;32m   2596\u001b[0m         ]\n\u001b[0;32m   2597\u001b[0m         columns \u001b[39m=\u001b[39m (\n\u001b[0;32m   2598\u001b[0m             \u001b[39mlist\u001b[39m(columns) \u001b[39m+\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mset\u001b[39m(index_columns) \u001b[39m-\u001b[39m \u001b[39mset\u001b[39m(columns))\n\u001b[0;32m   2599\u001b[0m         )\n\u001b[1;32m-> 2601\u001b[0m table \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataset\u001b[39m.\u001b[39;49mto_table(\n\u001b[0;32m   2602\u001b[0m     columns\u001b[39m=\u001b[39;49mcolumns, \u001b[39mfilter\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_filter_expression,\n\u001b[0;32m   2603\u001b[0m     use_threads\u001b[39m=\u001b[39;49muse_threads\n\u001b[0;32m   2604\u001b[0m )\n\u001b[0;32m   2606\u001b[0m \u001b[39m# if use_pandas_metadata, restore the pandas metadata (which gets\u001b[39;00m\n\u001b[0;32m   2607\u001b[0m \u001b[39m# lost if doing a specific `columns` selection in to_table)\u001b[39;00m\n\u001b[0;32m   2608\u001b[0m \u001b[39mif\u001b[39;00m use_pandas_metadata:\n",
+      "File \u001b[1;32mc:\\Users\\milan\\general_py_venv\\lib\\site-packages\\pyarrow\\_dataset.pyx:369\u001b[0m, in \u001b[0;36mpyarrow._dataset.Dataset.to_table\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\milan\\general_py_venv\\lib\\site-packages\\pyarrow\\_dataset.pyx:2818\u001b[0m, in \u001b[0;36mpyarrow._dataset.Scanner.to_table\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\milan\\general_py_venv\\lib\\site-packages\\pyarrow\\error.pxi:144\u001b[0m, in \u001b[0;36mpyarrow.lib.pyarrow_internal_check_status\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\milan\\general_py_venv\\lib\\site-packages\\pyarrow\\error.pxi:117\u001b[0m, in \u001b[0;36mpyarrow.lib.check_status\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mArrowMemoryError\u001b[0m: realloc of size 47185920 failed"
+     ]
+    }
+   ],
    "source": [
     "# Step 5: Iterate over Parquet files and load into DuckDB\n",
     "for file in parquet_files_dir:\n",
@@ -21201,29 +21219,29 @@
       "│ country │                  editor                   │ user_id  │ count  │\n",
       "│ varchar │                  varchar                  │  int32   │ int64  │\n",
       "├─────────┼───────────────────────────────────────────┼──────────┼────────┤\n",
-      "│ RUS     │ osmtools/30252 (linux)                    │   145231 │ 573398 │\n",
-      "│ ISR     │ JOSM/1.5 (15390 en)                       │   494636 │ 509535 │\n",
+      "│ PSE     │ osmtools/30252 (linux)                    │   145231 │ 573398 │\n",
+      "│ PSE     │ JOSM/1.5 (15390 en)                       │   494636 │ 509535 │\n",
       "│ RUS     │ OSM Translator UA                         │  1538111 │ 211240 │\n",
-      "│ DEU     │ StreetComplete 50.2                       │   173981 │ 148042 │\n",
+      "│ DEU     │ StreetComplete 52.0                       │   173981 │ 148042 │\n",
       "│ UKR     │ reverter_plugin/36043;JOSM/1.5 (18678 ru) │ 10572603 │ 120489 │\n",
-      "│ DZA     │ iD 2.24.1                                 │  5164102 │ 120379 │\n",
+      "│ DZA     │ JOSM/1.5 (18427 fr)                       │  5164102 │ 120379 │\n",
       "│ BRA     │ JOSM/1.5 (18700 pt_BR)                    │ 15372998 │ 118421 │\n",
-      "│ MOZ     │ reverter_plugin/36043;JOSM/1.5 (18570 en) │  8758904 │ 107349 │\n",
+      "│ USA     │ JOSM/1.5 (18570 en)                       │  8758904 │ 107349 │\n",
       "│ UZB     │ JOSM/1.5 (18583 ru)                       │ 17925720 │ 100305 │\n",
-      "│ TLS     │ Level0 v1.2                               │   616774 │  82326 │\n",
+      "│ USA     │ Level0 v1.2                               │   616774 │  82326 │\n",
       "│  ·      │     ·                                     │      ·   │     ·  │\n",
       "│  ·      │     ·                                     │      ·   │     ·  │\n",
       "│  ·      │     ·                                     │      ·   │     ·  │\n",
-      "│ RWA     │ iD 2.21.1                                 │ 18952130 │    165 │\n",
-      "│ SYR     │ iD 2.21.1                                 │ 10480130 │    165 │\n",
+      "│ PER     │ iD 2.24.2                                 │ 11183684 │    165 │\n",
       "│ RUS     │ iD 2.24.2                                 │ 18410910 │    165 │\n",
+      "│ SYR     │ iD 2.21.1                                 │ 10480130 │    165 │\n",
+      "│ MWI     │ iD 2.21.1                                 │ 19207355 │    165 │\n",
       "│ POL     │ JOSM/1.5 (18622 pl)                       │ 12155748 │    165 │\n",
       "│ TUR     │ RapiD 1.1.9-tm.1                          │ 18428952 │    165 │\n",
-      "│ MWI     │ iD 2.21.1                                 │ 19207355 │    165 │\n",
       "│ FRA     │ iD 2.25.2                                 │  3659068 │    165 │\n",
-      "│ BGR     │ iD 2.25.1                                 │ 18923495 │    165 │\n",
-      "│ DEU     │ iD 2.23.2                                 │ 18250461 │    165 │\n",
+      "│ BGR     │ iD 2.25.2                                 │ 18923495 │    165 │\n",
       "│ TUR     │ RapiD 1.1.9-tm.1                          │ 13165751 │    165 │\n",
+      "│ DEU     │ iD 2.23.2                                 │ 18250461 │    165 │\n",
       "├─────────┴───────────────────────────────────────────┴──────────┴────────┤\n",
       "│ ? rows (>9999 rows, 20 shown)                                 4 columns │\n",
       "└─────────────────────────────────────────────────────────────────────────┘\n",
@@ -21316,36 +21334,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌─────────┬─────────────────────┬──────────┬───────┐\n",
-      "│ country │       editor        │ user_id  │ count │\n",
-      "│ varchar │       varchar       │  int32   │ int64 │\n",
-      "├─────────┼─────────────────────┼──────────┼───────┤\n",
-      "│ CAN     │ JOSM/1.5 (18621 en) │  8285516 │  3802 │\n",
-      "│ ESP     │ iD 2.25.1           │  7543375 │  4879 │\n",
-      "│ USA     │ iD 2.25.1           │   542403 │  1788 │\n",
-      "│ TUN     │ iD 2.25.1           │  1293386 │  4180 │\n",
-      "│ IRN     │ JOSM/1.5 (18678 en) │  9998669 │  2762 │\n",
-      "│ IRN     │ JOSM/1.5 (18583 en) │ 14377768 │  2747 │\n",
-      "│ CAN     │ JOSM/1.5 (18700 de) │    47681 │   145 │\n",
-      "│ IRN     │ JOSM/1.5 (18621 en) │ 13408893 │  3225 │\n",
-      "│ USA     │ iD 2.24.1           │ 10176186 │  5896 │\n",
-      "│ USA     │ iD 2.24.2           │  4107798 │    14 │\n",
-      "│  ·      │     ·               │     ·    │     · │\n",
-      "│  ·      │     ·               │     ·    │     · │\n",
-      "│  ·      │     ·               │     ·    │     · │\n",
-      "│ ETH     │ iD 2.21.1           │ 18782975 │   129 │\n",
-      "│ ETH     │ iD 2.21.1           │ 18995055 │   137 │\n",
-      "│ ETH     │ iD 2.21.1           │  7916088 │    80 │\n",
-      "│ ETH     │ iD 2.21.1           │  7274889 │   268 │\n",
-      "│ NIC     │ JOSM/1.5 (18702 de) │    19488 │  1524 │\n",
-      "│ ETH     │ iD 2.21.1           │ 18929831 │    75 │\n",
-      "│ NIC     │ iD 2.24.2           │ 18444681 │   126 │\n",
-      "│ ETH     │ iD 2.21.1           │ 18631277 │    23 │\n",
-      "│ ETH     │ iD 2.21.1           │ 18571532 │     1 │\n",
-      "│ ETH     │ iD 2.21.1           │ 19132902 │    21 │\n",
-      "├─────────┴─────────────────────┴──────────┴───────┤\n",
-      "│ ? rows (>9999 rows, 20 shown)          4 columns │\n",
-      "└──────────────────────────────────────────────────┘\n",
+      "┌─────────┬────────────────────────┬──────────┬───────┐\n",
+      "│ country │         editor         │ user_id  │ count │\n",
+      "│ varchar │        varchar         │  int32   │ int64 │\n",
+      "├─────────┼────────────────────────┼──────────┼───────┤\n",
+      "│ GBR     │ JOSM/1.5 (18646 en_GB) │  3951648 │ 22775 │\n",
+      "│ GBR     │ osmapi/3.0.0           │ 15274698 │  2194 │\n",
+      "│ AUT     │ JOSM/1.5 (18622 en)    │    29717 │  9909 │\n",
+      "│ GBR     │ iD 2.25.1              │   251688 │   145 │\n",
+      "│ BRA     │ JOSM/1.5 (18622 de)    │   629849 │   541 │\n",
+      "│ AUS     │ iD 2.24.2              │ 10036384 │   269 │\n",
+      "│ GRL     │ JOSM/1.5 (18646 en)    │   646021 │    33 │\n",
+      "│ USA     │ iD 2.25.1              │   123189 │   184 │\n",
+      "│ GBR     │ JOSM/1.5 (18621 en_GB) │   324405 │   146 │\n",
+      "│ NOR     │ JOSM/1.5 (18646 en_GB) │  3497659 │ 31700 │\n",
+      "│  ·      │     ·                  │     ·    │     · │\n",
+      "│  ·      │     ·                  │     ·    │     · │\n",
+      "│  ·      │     ·                  │     ·    │     · │\n",
+      "│ BOL     │ iD 2.23.2              │ 18242255 │     5 │\n",
+      "│ COD     │ iD 2.21.1              │ 18166894 │  1094 │\n",
+      "│ ZMB     │ JOSM/1.5 (18622 en)    │    36894 │  3440 │\n",
+      "│ COL     │ JOSM/1.5 (18678 en)    │ 17826756 │   211 │\n",
+      "│ IDN     │ JOSM/1.5 (18583 en)    │  9421523 │ 24905 │\n",
+      "│ GNQ     │ JOSM/1.5 (18700 en_GB) │ 10958741 │   778 │\n",
+      "│ RUS     │ iD 2.24.1              │ 18409145 │    40 │\n",
+      "│ BRA     │ JOSM/1.5 (18543 en)    │ 14854473 │    65 │\n",
+      "│ RUS     │ iD 2.25.1              │ 16982678 │    30 │\n",
+      "│ CMR     │ JOSM/1.5 (18570 fr)    │ 15741997 │ 15547 │\n",
+      "├─────────┴────────────────────────┴──────────┴───────┤\n",
+      "│ ? rows (>9999 rows, 20 shown)             4 columns │\n",
+      "└─────────────────────────────────────────────────────┘\n",
       "\n"
      ]
     }
@@ -21836,6 +21854,104 @@
     "    ) AS subquery\n",
     "\n",
     "    GROUP BY subquery.user_id\n",
+    "    \n",
+    "\"\"\")\n",
+    "r1.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "r1 = duckdb.sql(\"\"\"\n",
+    "    SELECT \n",
+    "        ANY_VALUE(subquery.hashtags) AS \"hashtags\",\n",
+    "        ANY_VALUE(subquery.editor) AS \"editor\",\n",
+    "        ANY_VALUE(subquery.country) AS \"country\",\n",
+    "    \n",
+    "        subquery.user_id,\n",
+    "        COUNT(*) AS count\n",
+    "        \n",
+    "    FROM (\n",
+    "        SELECT\n",
+    "            UNNEST(hashtags) AS hashtags,\n",
+    "            \"country\",\n",
+    "            \"editor\",\n",
+    "            \"user_id\",\n",
+    "            \"tags\"::string\n",
+    "            \n",
+    " \n",
+    "            FROM db\n",
+    "            WHERE \"tags\" LIKE '%RapiD%'\n",
+    "        \n",
+    "    ) AS subquery\n",
+    "\n",
+    "    GROUP BY subquery.user_id\n",
+    "    \n",
+    "\"\"\")\n",
+    "r1.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "r1 = duckdb.sql(\"\"\"\n",
+    "SELECT \n",
+    "    ANY_VALUE(subquery.hashtags) AS hashtags,\n",
+    "    ANY_VALUE(subquery.editor) AS editor,\n",
+    "    ANY_VALUE(subquery.country) AS country,\n",
+    "    subquery.user_id,\n",
+    "    COUNT(*) AS count\n",
+    "FROM (\n",
+    "    SELECT\n",
+    "        UNNEST(hashtags) AS hashtags,\n",
+    "        country,\n",
+    "        editor,\n",
+    "        user_id,\n",
+    "        tags::string\n",
+    "    FROM db\n",
+    "    WHERE tags LIKE '%RapiD%'\n",
+    ") AS subquery\n",
+    "GROUP BY subquery.user_id;\n",
     "    \n",
     "\"\"\")\n",
     "r1.show()\n"
