Add PySpark filter for AI buildings and AI roads

--- a/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
+++ b/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
@@ -6,23 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Prosessing libs\n",
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
-    "\n",
     "from fastparquet import ParquetFile\n",
     "import glob\n",
     "\n",
-    "import pyarrow.parquet as pq\n",
-    "\n",
+    "# PySpark\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as psf\n",
     "\n",
-    "import duckdb\n",
-    "\n",
+    "# Visualisation libs\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
-    "# import statsmodels.api as sm\n",
     "import plotly.express as px\n"
    ]
   },
@@ -271,6 +268,14 @@
    "outputs": [],
    "source": [
     "# df.na.drop(how=\"any\",subset=[\"building_area\"]).show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data transformation, Data types conversion"
    ]
   },
   {
