--- a/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
+++ b/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
@@ -142,6 +142,18 @@
        " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2020\\\\data_7.parquet',\n",
        " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2020\\\\data_8.parquet',\n",
        " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2020\\\\data_9.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_0.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_1.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_10.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_11.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_2.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_3.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_4.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_5.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_6.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_7.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_8.parquet',\n",
+       " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2021\\\\data_9.parquet',\n",
        " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2022\\\\data_0.parquet',\n",
        " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2022\\\\data_1.parquet',\n",
        " 'E:\\\\\\\\Rafael-data\\\\\\\\type=way\\\\\\\\state=latest\\\\year=2022\\\\data_10.parquet',\n",
@@ -280,7 +292,7 @@
     {
      "data": {
       "text/plain": [
-       "563849513"
+       "707464699"
       ]
      },
      "execution_count": 11,
@@ -469,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "563849513"
+       "707464699"
       ]
      },
      "execution_count": 19,
@@ -493,10 +505,10 @@
       "+----+---------+\n",
       "|road|    count|\n",
       "+----+---------+\n",
-      "|  -1|  2902543|\n",
-      "|null|492066652|\n",
-      "|   1| 19183977|\n",
-      "|   0| 49696341|\n",
+      "|  -1|  3610999|\n",
+      "|null|614806132|\n",
+      "|   1| 24773460|\n",
+      "|   0| 64274108|\n",
       "+----+---------+\n",
       "\n"
      ]
@@ -518,7 +530,7 @@
       "+------+---------+\n",
       "| state|    count|\n",
       "+------+---------+\n",
-      "|latest|563849513|\n",
+      "|latest|707464699|\n",
       "+------+---------+\n",
       "\n"
      ]
@@ -591,10 +603,10 @@
       "+--------+---------+\n",
       "|building|    count|\n",
       "+--------+---------+\n",
-      "|      -1|  2680531|\n",
-      "|    null|241137680|\n",
-      "|       1|228926915|\n",
-      "|       0| 91104387|\n",
+      "|      -1|  3593851|\n",
+      "|    null|309961236|\n",
+      "|       1|278137282|\n",
+      "|       0|115772330|\n",
       "+--------+---------+\n",
       "\n"
      ]
@@ -666,7 +678,7 @@
     {
      "data": {
       "text/plain": [
-       "563849513"
+       "707464699"
       ]
      },
      "execution_count": 26,
@@ -712,40 +724,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------+--------------------+-------+--------------------+--------------------+----+--------------------+\n",
-      "|  osm_id|              editor|country|            tags_str|            hashtags|year|            datetime|\n",
-      "+--------+--------------------+-------+--------------------+--------------------+----+--------------------+\n",
-      "| 4483457|           iD 2.20.2|    DEU|{building -> yes,...|                  []|2022|2022-01-16 21:24:...|\n",
-      "| 6059391| JOSM/1.5 (11427 it)|    ITA|{building -> yes,...|                  []|2017|2017-01-20 04:15:...|\n",
-      "| 8102846|            iD 2.1.3|    CZE|{building -> yes,...|                  []|2017|2017-03-20 09:35:...|\n",
-      "| 8113022|JOSM/1.5 (16826 e...|    LUX|{building -> yes,...|                  []|2020|2020-08-03 11:13:...|\n",
-      "|10367386| StreetComplete 26.2|    DEU|{building -> yes,...|                  []|2020|2020-11-25 14:58:...|\n",
-      "|10508610| JOSM/1.5 (11639 en)|    CZE|{building -> resi...|                  []|2017|2017-03-07 14:02:...|\n",
-      "|10686505|           iD 2.18.5|    CHN|{building -> yes,...|                  []|2020|2020-09-20 19:42:...|\n",
-      "|11483224|           iD 2.17.2|    BRA|{building -> yes,...|[#Emergency_hospi...|2020|2020-03-03 13:02:...|\n",
-      "|11643310| JOSM/1.5 (18303 cs)|    DEU|{building -> yes,...|                  []|2023|2023-01-08 14:42:...|\n",
-      "|12271062| JOSM/1.5 (15937 de)|    DEU|{building -> yes,...|                  []|2020|2020-03-18 16:48:...|\n",
-      "|12362740|           iD 2.24.2|    DEU|{building -> apar...|                  []|2023|2023-02-13 08:25:...|\n",
-      "|12958825| JOSM/1.5 (18427 en)|    DEU|   {building -> yes}|                  []|2022|2022-04-20 19:15:...|\n",
-      "|13860507|           iD 2.23.2|    DEU|{building -> yes,...|                  []|2022|2022-12-07 22:19:...|\n",
-      "|13860550| JOSM/1.5 (13710 de)|    DEU|{building -> apar...|                  []|2018|2018-08-10 09:47:...|\n",
-      "|14019593|           iD 2.25.1|    GBR|{building -> yes,...|                  []|2023|2023-04-25 15:24:...|\n",
-      "|14098618|            iD 2.8.0|    FIN|{building -> yes,...|                  []|2018|2018-04-22 21:29:...|\n",
-      "|14151979| JOSM/1.5 (16239 de)|    DEU|   {building -> yes}|                  []|2020|2020-04-18 18:11:...|\n",
-      "|14462244| JOSM/1.5 (14178 en)|    FIN|{building -> apar...|                  []|2018|2018-11-05 10:12:...|\n",
-      "|14527423| JOSM/1.5 (13174 cs)|    CZE|{building -> hous...|                  []|2017|2017-12-05 10:03:...|\n",
-      "|14527460| JOSM/1.5 (13174 cs)|    CZE|{building -> hous...|                  []|2017|2017-12-05 10:03:...|\n",
-      "+--------+--------------------+-------+--------------------+--------------------+----+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df_blds.show()"
    ]
@@ -799,10 +778,10 @@
       "|year|  count|\n",
       "+----+-------+\n",
       "|2023|3272936|\n",
-      "|2022|7192149|\n",
+      "|2022|7192211|\n",
       "|2019|  10300|\n",
       "|2020|2149154|\n",
-      "|2021|    139|\n",
+      "|2021|2964550|\n",
       "+----+-------+\n",
       "\n"
      ]
@@ -1000,7 +979,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_roads_f1 = df_roads.filter(((df_roads.tags_str.contains(\"mapwithai\") | df_roads.tags_str.contains(\"MapWithAI\") | df_roads.tags_str.contains(\"#nsroadimport\"))))\n"
+    "df_roads_f1 = df_roads.filter(df_roads.tags_str.contains(\"mapwithai\") | df_roads.tags_str.contains(\"MapWithAI\") | df_roads.tags_str.contains(\"nsroadimport\"))\n"
    ]
   },
   {
@@ -1042,8 +1021,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_roads_f2 = df_roads.filter(((df_roads.tags_str.contains(\"mapwithai\") | df_roads.tags_str.contains(\"MapWithAI\") | df_roads.tags_str.contains(\"#nsroadimport\")) & (df_roads.tags_str.contains(\"highway\")))\n",
-    "                              | (df_roads.hashtags_un.contains(\"#mapwithai\") | df_roads.hashtags_un.contains(\"#nsroadimport\") & (df_roads.tags_str.contains(\"highway\"))))\n"
+    "df_roads_f2 = df_roads.filter(((df_roads.tags_str.contains(\"mapwithai\") | df_roads.tags_str.contains(\"MapWithAI\") | df_roads.tags_str.contains(\"nsroadimport\")) & (df_roads.tags_str.contains(\"highway\")))\n",
+    "                              | (df_roads.hashtags_un.contains(\"mapwithai\") | df_roads.hashtags_un.contains(\"nsroadimport\") & (df_roads.tags_str.contains(\"highway\"))))\n"
    ]
   },
   {
@@ -1134,7 +1113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_roads_f3_2 = df_roads.filter((df_roads.editor.contains(\"RapiD\") | (df_roads.tags_str.contains(\"mapwithai\") | df_roads.hashtags_un.contains(\"mapwithai\"))))\n"
+    "df_roads_f3_2 = df_roads.filter((df_roads.editor.contains(\"RapiD\") | df_roads.tags_str.contains(\"mapwithai\") | df_roads.hashtags_un.contains(\"mapwithai\") | df_roads.tags_str.contains(\"MapWithAI\") | df_roads.hashtags_un.contains(\"MapWithAI\")))\n"
    ]
   },
   {
@@ -1173,7 +1152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_roads_f3_3 = df_roads.filter((df_roads.editor.contains(\"RapiD\") & (df_roads.tags_str.contains(\"mapwithai\") | df_roads.hashtags_un.contains(\"mapwithai\"))))\n"
+    "df_roads_f3_3 = df_roads.filter((df_roads.editor.contains(\"RapiD\") & (df_roads.tags_str.contains(\"mapwithai\") | df_roads.hashtags_un.contains(\"mapwithai\") | df_roads.tags_str.contains(\"MapWithAI\") | df_roads.hashtags_un.contains(\"MapWithAI\"))))\n"
    ]
   },
   {
