Add stats (excel files) from contribution data

--- a/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
+++ b/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
@@ -881,16 +881,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_roads_created = df.filter(psf.col('road').isin([1])) # | psf.col('road').isNull()"
+    "df_roads_created = df.filter(psf.col('road').isin([1]) | psf.col('road').isNull()) # | psf.col('road').isNull()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,24 +1190,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+----------------+-----------+----------+---------+\n",
-      "|year|     sum(osm_id)|sum(length)| sum(year)|sum(road)|\n",
-      "+----+----------------+-----------+----------+---------+\n",
-      "|2018|  64573305656102|   23157742| 216916838|   107491|\n",
-      "|2023| 221348467642874|   46731096| 395385235|   195445|\n",
-      "|2022|1176223960999308|  233919451|2255077962|  1115271|\n",
-      "|2019|  82079247792131|   33188585| 228690111|   113269|\n",
-      "|2020| 847235345781677|  222378350|2068290120|  1023906|\n",
-      "|2017|  44529658372857|   18280815| 171463153|    85009|\n",
-      "|2021|1276908315441563|  260240425|2706331205|  1339105|\n",
-      "+----+----------------+-----------+----------+---------+\n",
+      "+----+----------------+-----------+-----------+---------+\n",
+      "|year|     sum(osm_id)|sum(length)|  sum(year)|sum(road)|\n",
+      "+----+----------------+-----------+-----------+---------+\n",
+      "|2018| 103751512284200|   58900549|  358655104|   107491|\n",
+      "|2023|4089982442760974|  233935088| 7457233175|   195445|\n",
+      "|2022|7353034221225215|  674568081|14382079578|  1115271|\n",
+      "|2019| 406493157010013|   91166802| 1137621702|   113269|\n",
+      "|2020|4199113604817773|  781642857|10568438000|  1023906|\n",
+      "|2017|  62286114531654|   36559347|  243308693|    85009|\n",
+      "|2021|5732717372847825|  861096352|12610732808|  1339105|\n",
+      "+----+----------------+-----------+-----------+---------+\n",
       "\n"
      ]
     }
@@ -1270,16 +1270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_roads_edited = df.filter(psf.col('road').isin([0])) #  | psf.col('road').isNull()"
+    "df_roads_edited = df.filter(psf.col('road').isin([0]) | psf.col('road').isNull()) #  | psf.col('road').isNull()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,24 +1572,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+---------------+-----------+----------+---------+\n",
-      "|year|    sum(osm_id)|sum(length)| sum(year)|sum(road)|\n",
-      "+----+---------------+-----------+----------+---------+\n",
-      "|2018|  8653142822975|   23043121|  53866474|        0|\n",
-      "|2023|140532185671126|  155372470| 399936985|        0|\n",
-      "|2022|681425522297664|  578492618|1968829488|        0|\n",
-      "|2019| 15386868456824|   24589256|  63311802|        0|\n",
-      "|2020|481324036480915|  422355766|1705261780|        0|\n",
-      "|2017|  3789969358755|   11511659|  25369826|        0|\n",
-      "|2021|758582851073581|  744793301|2182574908|        0|\n",
-      "+----+---------------+-----------+----------+---------+\n",
+      "+----+----------------+-----------+-----------+---------+\n",
+      "|year|     sum(osm_id)|sum(length)|  sum(year)|sum(road)|\n",
+      "+----+----------------+-----------+-----------+---------+\n",
+      "|2018|  47831349451073|   58785928|  195604740|        0|\n",
+      "|2023|4009166160789226|  342576462| 7461784925|        0|\n",
+      "|2022|6858235782523571| 1019141248|14095831104|        0|\n",
+      "|2019| 339800777674706|   82567473|  972243393|        0|\n",
+      "|2020|3833202295517011|  981620273|10205409660|        0|\n",
+      "|2017|  21546425517552|   29790191|   97215366|        0|\n",
+      "|2021|5214391908479843| 1345649228|12086976511|        0|\n",
+      "+----+----------------+-----------+-----------+---------+\n",
       "\n"
      ]
     }
