Global and Local Spatial Autocorrelation

--- a/notebooks-blds/blds-download-export-data-ver2.ipynb
+++ b/notebooks-blds/blds-download-export-data-ver2.ipynb
@@ -72,10 +72,12 @@
      "data": {
       "text/plain": [
        "['geojson-africa-states',\n",
+       " 'geojson-africa-test-states',\n",
        " 'geojson-asia-states',\n",
        " 'geojson-continent-states',\n",
        " 'geojson-europe-states',\n",
        " 'geojson-northamerica-states',\n",
+       " 'geojson-world-states-ohsome',\n",
        " 'geojson-world-states']"
       ]
      },
@@ -147,11 +149,13 @@
      "data": {
       "text/plain": [
        "{0: 'geojson-africa-states',\n",
-       " 1: 'geojson-asia-states',\n",
-       " 2: 'geojson-continent-states',\n",
-       " 3: 'geojson-europe-states',\n",
-       " 4: 'geojson-northamerica-states',\n",
-       " 5: 'geojson-world-states'}"
+       " 1: 'geojson-africa-test-states',\n",
+       " 2: 'geojson-asia-states',\n",
+       " 3: 'geojson-continent-states',\n",
+       " 4: 'geojson-europe-states',\n",
+       " 5: 'geojson-northamerica-states',\n",
+       " 6: 'geojson-world-states-ohsome',\n",
+       " 7: 'geojson-world-states'}"
       ]
      },
      "execution_count": 5,
@@ -279,7 +283,7 @@
     "        \"groupByKey\": \"source\",\n",
     "        \"groupByValues\": \"microsoft/BuildingFootprints,esri/Google_Africa_Buildings\",\n",
     "        \"format\": \"json\",\n",
-    "        \"time\": \"2018-01-01/2023-01-01/P1Y\",\n",
+    "        \"time\": \"2023-06-01\",  # \"2018-01-01/2023-06-01/P1Y\"\n",
     "        }\n",
     "    headers = {\n",
     "        \"accept\": \"application/json\",\n",
@@ -372,9 +376,9 @@
     "\n",
     "    for elem in data:\n",
     "        if elem['groupByObject'][1] == 'remainder':\n",
-    "            rem_value_to_add = find_value(elem, '2023-01-01T00:00:00Z')\n",
+    "            rem_value_to_add = find_value(elem, '2023-06-01T00:00:00Z')\n",
     "        elif elem['groupByObject'][1] == 'source=microsoft/BuildingFootprints':\n",
-    "            ai_value_to_add = find_value(elem, '2023-01-01T00:00:00Z')\n",
+    "            ai_value_to_add = find_value(elem, '2023-06-01T00:00:00Z')\n",
     "\n",
     "    blds_total = rem_value_to_add + ai_value_to_add\\\n",
     "        if rem_value_to_add is not None and ai_value_to_add is not None else None\n",
@@ -516,7 +520,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 209/209 [1:48:59<00:00, 31.29s/it]   \n"
+      "  0%|          | 0/209 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 209/209 [1:59:48<00:00, 34.39s/it]  \n"
      ]
     }
    ],
@@ -601,116 +612,14 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>remainder</td>\n",
-       "      <td>2018-01-01T00:00:00Z</td>\n",
-       "      <td>11987966.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>remainder</td>\n",
-       "      <td>2019-01-01T00:00:00Z</td>\n",
-       "      <td>24924151.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>remainder</td>\n",
-       "      <td>2020-01-01T00:00:00Z</td>\n",
-       "      <td>26423299.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>remainder</td>\n",
-       "      <td>2021-01-01T00:00:00Z</td>\n",
-       "      <td>30570946.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>remainder</td>\n",
-       "      <td>2022-01-01T00:00:00Z</td>\n",
-       "      <td>36251876.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3727</th>\n",
-       "      <td>Scarborough Shoal</td>\n",
-       "      <td>source=esri/Google_Africa_Buildings</td>\n",
-       "      <td>2019-01-01T00:00:00Z</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3728</th>\n",
-       "      <td>Scarborough Shoal</td>\n",
-       "      <td>source=esri/Google_Africa_Buildings</td>\n",
-       "      <td>2020-01-01T00:00:00Z</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3729</th>\n",
-       "      <td>Scarborough Shoal</td>\n",
-       "      <td>source=esri/Google_Africa_Buildings</td>\n",
-       "      <td>2021-01-01T00:00:00Z</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3730</th>\n",
-       "      <td>Scarborough Shoal</td>\n",
-       "      <td>source=esri/Google_Africa_Buildings</td>\n",
-       "      <td>2022-01-01T00:00:00Z</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3731</th>\n",
-       "      <td>Scarborough Shoal</td>\n",
-       "      <td>source=esri/Google_Africa_Buildings</td>\n",
-       "      <td>2023-01-01T00:00:00Z</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3732 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                feature                               source  \\\n",
-       "0             Indonesia                            remainder   \n",
-       "1             Indonesia                            remainder   \n",
-       "2             Indonesia                            remainder   \n",
-       "3             Indonesia                            remainder   \n",
-       "4             Indonesia                            remainder   \n",
-       "...                 ...                                  ...   \n",
-       "3727  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
-       "3728  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
-       "3729  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
-       "3730  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
-       "3731  Scarborough Shoal  source=esri/Google_Africa_Buildings   \n",
-       "\n",
-       "                 timestamp       value  \n",
-       "0     2018-01-01T00:00:00Z  11987966.0  \n",
-       "1     2019-01-01T00:00:00Z  24924151.0  \n",
-       "2     2020-01-01T00:00:00Z  26423299.0  \n",
-       "3     2021-01-01T00:00:00Z  30570946.0  \n",
-       "4     2022-01-01T00:00:00Z  36251876.0  \n",
-       "...                    ...         ...  \n",
-       "3727  2019-01-01T00:00:00Z         0.0  \n",
-       "3728  2020-01-01T00:00:00Z         0.0  \n",
-       "3729  2021-01-01T00:00:00Z         0.0  \n",
-       "3730  2022-01-01T00:00:00Z         0.0  \n",
-       "3731  2023-01-01T00:00:00Z         0.0  \n",
-       "\n",
-       "[3732 rows x 4 columns]"
+       "Empty DataFrame\n",
+       "Columns: [feature, source, timestamp, value]\n",
+       "Index: []"
       ]
      },
      "execution_count": 15,
