Identify Vietnam in dataset and filter blds with NULL values

--- a/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
+++ b/notebooks-contributions/open-parquet-pyspark-new-data-structure.ipynb
@@ -510,7 +510,7 @@
     }
    ],
    "source": [
-    "df.show()"
+    "# df.show()"
    ]
   },
   {
@@ -581,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_blds_created = df.filter(psf.col('building').isin([1])) # | psf.col('building').isNull()\n"
+    "df_blds_created = df.filter(psf.col('building').isin([1]) | psf.col('building').isNull()) # | psf.col('building').isNull()\n"
    ]
   },
   {
@@ -1049,7 +1049,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_blds_edited = df.filter(psf.col('building').isin([0])) # | psf.col('building').isNull()\n"
+    "df_blds_edited = df.filter(psf.col('building').isin([0]) | psf.col('building').isNull()) # | psf.col('building').isNull()\n"
    ]
   },
   {
